# ilab-on-ocp

./: .dockerignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.konflux  Makefile  README.md  artifacts.lock.yaml  importer-pipeline.yaml  pipeline.py  pipeline.yaml  pyproject.toml  requirements-build.txt  requirements-konflux.txt  requirements.txt  rpms.in.yaml  rpms.lock.tmp.yaml  rpms.lock.yaml  run-pipeline-on-rhoai-.md  run-pipeline-on-rhoai.md  ubi.repo
.github/workflows/: build-main.yml  pre_commit.yaml  regenerate-rpm-lockfile.yml  renovate.json
.tekton/: README.md  odh-ml-pipelines-runtime-generic-pull-request.yaml  odh-ml-pipelines-runtime-generic-v2-18-pull-request.yaml  odh-ml-pipelines-runtime-generic-v2-18-push.yaml  odh-ml-pipelines-runtime-generic-v2-19-push.yaml  odh-ml-pipelines-runtime-generic-v2-20-push.yaml  odh-ml-pipelines-runtime-generic-v2-21-push.yaml  odh-ml-pipelines-runtime-generic-v2-24-pull-request.yaml
docs/: base_model.md  disconnected_setup.md  troubleshooting.md
eval/: __init__.py  final.py  mt_bench.py
kubernetes_yaml/mixtral_serve/mixtral_pull/: pull_kube_job.yaml
kubernetes_yaml/prometheus_serve/prometheus_pull/: pull_kube_job.yaml
manifests/: README.md
manifests/mixtral_serve/: README.md
manifests/nfs_storage/: nfs_storage.md
manifests/prometheus_serve/: README.md
mixtral-tokenizer/: tokenizer.json
sdg/: __init__.py  components.py
standalone/: standalone.py
tests/: go.mod  go.sum
training/: __init__.py  components.py
utils/: __init__.py  components.py  consts.py
(+12 files in other folders)
